--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/Grad_Photo.png" alt="Isaiah Sarkor profile picture" class="profile-pic"/>
+        <img src="./assets/Grad_Photo.jpg" alt="Isaiah Sarkor profile picture" class="profile-pic"/>
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
